Fixed register css not aligned. combined login+register css due to duplicate code

--- a/user/client/src/components/InputField/InputField.css
+++ b/user/client/src/components/InputField/InputField.css
@@ -19,10 +19,6 @@ input {
   }
 }
 
-.ant-form-item-label {
-  margin-left: 40px;
-}
-
 .anticon {
   font-size: 30px;
   vertical-align: top;
